--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    implementation 'com.google.firebase:firebase-firestore:21.3.1'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
